# heart-disease-clustering

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/interim/: heart_disease_uci_cleaned.csv
data/processed/: heart_disease_uci_pca.csv  heart_disease_uci_processed.csv
notebooks/: 01_data_preprocessing.ipynb  02_clustering_analysis.ipynb  03_correlation_analysis.ipynb
scripts/: download_data.py  logger.py
