[project]
name = "heart-disease-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "constscr",email = "golubevk2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.3.0"
ruff = "^0.15.5"
pre-commit = "^4.5.1"

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(.venv|
__pycache__)
'''

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv", "__pycache__"]
select = ["E", "F", "I", "B", "UP", "C4", "PL"]
ignore = ["E203", "E266", "E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
